# AT_campus

./: README.md
RPI/: README.md  left_camera.launch  rear_camera.launch  right_camera.launch
RPI/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
RPI/devel/include/hanke_pison_image_transport/: ResizedImage.h
RPI/devel/include/image_transport_tutorial/: ResizedImage.h
RPI/devel/lib/image_transport_tutorial/: my_publisher  my_subscriber
RPI/devel/lib/pkgconfig/: image_transport_tutorial.pc
RPI/src/hanke_pison_image_transport/: CMakeLists.txt  package.xml
RPI/src/hanke_pison_image_transport/src/: my_subscriber.cpp  video_publisher.cpp  video_publisher_2.cpp
TX2/: README.md  recieve_video.launch  teleop.launch  zed_camera.launch
TX2/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
TX2/devel/include/hanke_pison_image_transport/: ResizedImage.h
TX2/src/hanke_pison_image_transport/: CMakeLists.txt  package.xml
TX2/src/lane_detection/: CMakeLists.txt  package.xml  setup.py
TX2/src/teleop/: CMakeLists.txt  package.xml
TX2/src/teleop/src/: teleop.cpp
arduino/rear_wheel/: HP_Brake.cpp  HP_Brake.h  HP_DrivingMotor.cpp  HP_DrivingMotor.h  rear_wheel.ino
arduino/receiver/: HP_Receiver.cpp  HP_Receiver.h  receiver.ino
arduino/sensors/: HP_GPS.cpp  HP_GPS.h  HP_IMU.cpp  HP_IMU.h  sensors.ino
arduino/turn_stepper/: HP_Stepper.cpp  HP_Stepper.h  turn_stepper.ino
motion_detector/: CMakeLists.txt  package.xml
motion_detector/launch/: motion_detection.launch
motion_detector/rviz/: motion.rviz
motion_detector/src/: motion_detector.py
(+35 files in other folders)
